# code-quality-analyzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/analyzer/: core.py
src/cli/: main.py
src/report/: __init__.py  generator.py
